--- a/UnityLauncherPro/NewProject.xaml
+++ b/UnityLauncherPro/NewProject.xaml
@@ -7,7 +7,7 @@
         xmlns:data="clr-namespace:UnityLauncherPro.Data"
         d:DataContext="{d:DesignInstance Type=local:NewProject}"
         mc:Ignorable="d"
-        Title="Create New Project" Height="480" Width="640" Background="{DynamicResource ThemeDarkestBackground}" PreviewKeyDown="Window_PreviewKeyDown" ResizeMode="NoResize" WindowStartupLocation="CenterOwner" ShowInTaskbar="True">
+        Title="Create New Project" Height="520" Width="640" Background="{DynamicResource ThemeDarkestBackground}" PreviewKeyDown="Window_PreviewKeyDown" ResizeMode="NoResize" WindowStartupLocation="CenterOwner" ShowInTaskbar="True">
 
     <Grid>
         <Grid.ColumnDefinitions>
@@ -24,7 +24,7 @@
                 </DataGrid.Columns>
             </DataGrid>
 
-            <Grid HorizontalAlignment="Stretch" Margin="0,3,0,0">
+            <Grid HorizontalAlignment="Stretch" Margin="0,20,0,0">
                 <Grid.ColumnDefinitions>
                     <ColumnDefinition Width="35*"/>
                     <ColumnDefinition Width="15*"/>
@@ -50,7 +50,7 @@
                 <CheckBox Grid.Column="3" x:Name="chkForceDX11" Content="DX11" ToolTip="Use DX11 instead of DX12" Margin="6,0,0,0" IsChecked="False" Checked="chkForceDX11_Checked" Unchecked="chkForceDX11_Checked"/>
             </Grid>
 
-            <Label x:Name="lblNewProjectFolderLabel" Grid.Column="0" Content="Project Root Folder:" Foreground="{DynamicResource ThemeButtonForeground}" Margin="0" Padding="0,5,5,0" />
+            <Label x:Name="lblNewProjectFolderLabel" Grid.Column="0" Content="Project Root Folder:" Foreground="{DynamicResource ThemeButtonForeground}" Margin="0,8,0,0" Padding="0,5,5,0" />
             <Grid HorizontalAlignment="Stretch" Margin="0,3,0,0">
                 <Grid.ColumnDefinitions>
                     <ColumnDefinition Width="18*"/>
@@ -63,7 +63,7 @@
             </Grid>
 
             <!--<Label x:Name="lblNewProjectFolder" Content="(folder)" Foreground="{DynamicResource ThemeButtonForegroundDisabled}" Margin="0" FontSize="10" Padding="5,0,5,3" />-->
-            <Grid HorizontalAlignment="Stretch" Margin="0,24,0,0">
+            <Grid HorizontalAlignment="Stretch" Margin="0,32,0,0">
                 <Grid.ColumnDefinitions>
                     <ColumnDefinition Width="0.7*"/>
                     <ColumnDefinition Width="*"/>
@@ -86,40 +86,9 @@
         </StackPanel>
         <StackPanel Orientation="Vertical" Margin="0,3,10,3" Grid.Column="1">
             <Label Content="Unity Online Templates" Foreground="{DynamicResource ThemeButtonForeground}" Margin="0,0,0,3" Padding="5,5,5,3" />
-            <!-- search box -->
-            <Grid Background="{DynamicResource ThemeTextBoxBackground}" VerticalAlignment="Top" Margin="6,5,0,0" Height="20"  >
-                <TextBlock Margin="3,2" MinWidth="100" Text="Filter" Foreground="{DynamicResource ThemeSearchPlaceholder}" Height="24">
-                    <TextBlock.Style>
-                        <Style TargetType="TextBlock">
-                            <Setter Property="Visibility" Value="Collapsed" />
-                            <Style.Triggers>
-                                <DataTrigger Binding="{Binding Text, ElementName=txtFilterTemplates}" Value="">
-                                    <Setter Property="Visibility" Value="Visible" />
-                                </DataTrigger>
-                            </Style.Triggers>
-                        </Style>
-                    </TextBlock.Style>
-                </TextBlock>
-                <TextBox MinWidth="100" CaretBrush="{DynamicResource ThemeSearchCaret}" x:Name="txtFilterTemplates" Background="Transparent" BorderBrush="{x:Null}" Foreground="{DynamicResource ThemeSearchForeground}" SelectionBrush="{DynamicResource ThemeSearchSelection}" BorderThickness="0" Margin="2,2,0,0" UndoLimit="64"  />
-                <Button x:Name="btnClearUpdatesSearch" Style="{StaticResource {x:Static ToolBar.ButtonStyleKey}}" BorderThickness="0"  HorizontalAlignment="Right" VerticalAlignment="Top" Height="23" Width="23" Background="Transparent" Padding="0,2" Visibility="Visible" BorderBrush="{x:Null}" >
-                    <TextBlock Text="❌" FontSize="8" Foreground="{DynamicResource ThemeSearchClose}" Padding="5,3,4,4" HorizontalAlignment="Center">
-                        <TextBlock.Style>
-                            <Style TargetType="{x:Type TextBlock}">
-                                <Style.Triggers>
-                                    <DataTrigger Binding="{Binding Text, ElementName=txtFilterTemplates}" Value="">
-                                        <Setter Property="Visibility" Value="Hidden"/>
-                                    </DataTrigger>
-                                    <DataTrigger Binding="{Binding Text, ElementName=txtFilterTemplates}" Value="{x:Null}">
-                                        <Setter Property="Visibility" Value="Hidden"/>
-                                    </DataTrigger>
-                                </Style.Triggers>
-                            </Style>
-                        </TextBlock.Style>
-                    </TextBlock>
-                </Button>
-            </Grid>
 
-            <ListBox x:Name="listOnlineTemplates" Margin="6,5,0,0" Height="310" 
+
+            <ListBox x:Name="listOnlineTemplates" Margin="6,5,0,0" Height="411" 
          Background="{DynamicResource ThemeMainBackgroundColor}" 
          Foreground="{DynamicResource ThemeButtonForeground}" 
          ScrollViewer.HorizontalScrollBarVisibility="Disabled"
@@ -140,11 +109,60 @@
                 <ListBox.ItemTemplate>
                     <DataTemplate>
                         <StackPanel Orientation="Vertical" Margin="3">
-                            <Image Source="{Binding PreviewImageURL}" 
-                       Margin="0,0,0,5" 
-                       ToolTip="{Binding Description}" 
-                       Stretch="Uniform"
-                       HorizontalAlignment="Stretch"/>
+                            <Grid>
+                                <Image Source="{Binding PreviewImageURL}" 
+                           Margin="0,0,0,5" 
+                           ToolTip="{Binding Description}" 
+                           Stretch="Uniform"
+                           HorizontalAlignment="Stretch"/>
+                                <Button x:Name="btnDownloadTemplate" 
+                                    ToolTip="Download Template" 
+                                    Content="⬇" 
+                                    Height="24" 
+                                    Width="24" 
+                                    HorizontalAlignment="Right" 
+                                    VerticalAlignment="Top" 
+                                    FontSize="14" 
+                                    Margin="2" 
+                                    Padding="0" 
+                                    BorderBrush="{x:Null}"
+                                    Opacity="0.85"
+                                    Click="btnDownloadTemplate_Click"
+                                    Tag="{Binding}">
+                                    <Button.Style>
+                                        <Style TargetType="Button" BasedOn="{StaticResource CustomButton}">
+                                            <Setter Property="Visibility" Value="Visible"/>
+                                            <Style.Triggers>
+                                                <DataTrigger Binding="{Binding IsDownloaded}" Value="True">
+                                                    <Setter Property="Visibility" Value="Collapsed"/>
+                                                </DataTrigger>
+                                            </Style.Triggers>
+                                        </Style>
+                                    </Button.Style>
+                                </Button>
+                                <!-- Downloaded indicator badge -->
+                                <Border Background="#CC2E7D32" 
+                                        CornerRadius="3"
+                                        HorizontalAlignment="Right" 
+                                        VerticalAlignment="Top" 
+                                        Padding="4,2"
+                                        Margin="2">
+                                    <Border.Style>
+                                        <Style TargetType="Border">
+                                            <Setter Property="Visibility" Value="Collapsed"/>
+                                            <Style.Triggers>
+                                                <DataTrigger Binding="{Binding IsDownloaded}" Value="True">
+                                                    <Setter Property="Visibility" Value="Visible"/>
+                                                </DataTrigger>
+                                            </Style.Triggers>
+                                        </Style>
+                                    </Border.Style>
+                                    <TextBlock Text="✓" 
+                                               FontSize="10" 
+                                               FontWeight="Bold"
+                                               Foreground="White"/>
+                                </Border>
+                            </Grid>
                             <TextBlock Text="{Binding Name}" 
                            FontWeight="Bold" 
                            TextWrapping="Wrap"
