--- a/UnityLauncherPro/NewProject.xaml
+++ b/UnityLauncherPro/NewProject.xaml
@@ -117,16 +117,16 @@
                            HorizontalAlignment="Stretch"/>
                                 <Button x:Name="btnDownloadTemplate" 
                                     ToolTip="Download Template" 
-                                    Content="⬇" 
-                                    Height="24" 
-                                    Width="24" 
+                                    Content="📥" 
+                                    Height="32" 
+                                    Width="32" 
                                     HorizontalAlignment="Right" 
                                     VerticalAlignment="Top" 
-                                    FontSize="14" 
-                                    Margin="2" 
+                                    FontSize="18"
+                                    Margin="1" 
                                     Padding="0" 
                                     BorderBrush="{x:Null}"
-                                    Opacity="0.85"
+                                    Opacity="0.9"
                                     Click="btnDownloadTemplate_Click"
                                     Tag="{Binding}">
                                     <Button.Style>
