--- a/UnityLauncherPro/App.xaml
+++ b/UnityLauncherPro/App.xaml
@@ -257,6 +257,7 @@
                 <Setter Property="OverridesDefaultStyle" Value="true"/>
                 <Setter Property="Background" Value="{DynamicResource ThemeButtonBackground}"/>
                 <Setter Property="Foreground" Value="{DynamicResource ThemeButtonForeground}"/>
+                <!--<Setter Property="BorderBrush" Value="{x:Null}"/>-->
                 <Setter Property="Template">
                     <Setter.Value>
                         <ControlTemplate TargetType="{x:Type Button}">
